--- a/FlightManager/FlightManager.csproj
+++ b/FlightManager/FlightManager.csproj
@@ -71,6 +71,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\RegisterController.cs" />
+    <Compile Include="GlobalData\Data.cs" />
     <Compile Include="Models\Account.cs">
       <DependentUpon>FlightsDBModel.tt</DependentUpon>
     </Compile>
@@ -97,6 +98,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\GeneralView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\GeneralView.Designer.cs">
+      <DependentUpon>GeneralView.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\MainView.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -118,6 +125,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Views\GeneralView.resx">
+      <DependentUpon>GeneralView.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Views\MainView.resx">
       <DependentUpon>MainView.cs</DependentUpon>
     </EmbeddedResource>
