added admin general view and made connections between the generals and the login screen

--- a/FlightManager/App.config
+++ b/FlightManager/App.config
@@ -8,7 +8,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
   <connectionStrings>
-    <add name="FlightsDBEntities" connectionString="metadata=res://*/Models.FlightsDBModel.csdl|res://*/Models.FlightsDBModel.ssdl|res://*/Models.FlightsDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=C:\Users\student\Source\Repos\stankopk\FlightManager2\FlightManager\FlightsDB.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="FlightsDBEntities" connectionString="metadata=res://*/Models.FlightsDBModel.csdl|res://*/Models.FlightsDBModel.ssdl|res://*/Models.FlightsDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=C:\Users\PC13-204\Source\Repos\stankopk\FlightManager2\FlightManager\FlightsDB.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
