--- a/FlightManager/FlightManager.csproj
+++ b/FlightManager/FlightManager.csproj
@@ -99,6 +99,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\AdminGeneralView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\AdminGeneralView.Designer.cs">
+      <DependentUpon>AdminGeneralView.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\GeneralView.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -132,6 +138,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Views\AdminGeneralView.resx">
+      <DependentUpon>AdminGeneralView.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Views\GeneralView.resx">
       <DependentUpon>GeneralView.cs</DependentUpon>
     </EmbeddedResource>
