--- a/FlightManager/App.config
+++ b/FlightManager/App.config
@@ -8,7 +8,11 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
   <connectionStrings>
-    <add name="FlightsDBEntities" connectionString="metadata=res://*/Models.FlightsDBModel.csdl|res://*/Models.FlightsDBModel.ssdl|res://*/Models.FlightsDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=C:\Users\PC13-204\Source\Repos\stankopk\FlightManager2\FlightManager\FlightsDB.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="FlightsDBEntities" connectionString="metadata=res://*/Models.FlightsDBModel.csdl|res://*/Models.FlightsDBModel.ssdl|res://*/Models.FlightsDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=C:\Users\PC03-204\Source\Repos\stankopk\FlightManager2\FlightManager\FlightsDB.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+      providerName="System.Data.EntityClient" />
+    <add name="FlightManager.Properties.Settings.FlightsDBConnectionString"
+      connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\FlightsDB.mdf;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
