--- a/FlightManager/FlightManager.csproj
+++ b/FlightManager/FlightManager.csproj
@@ -72,6 +72,11 @@
   <ItemGroup>
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\RegisterController.cs" />
+    <Compile Include="FlightsDBDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>FlightsDBDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Global Data\Data.cs" />
     <Compile Include="Models\Account.cs">
       <DependentUpon>FlightsDBModel.tt</DependentUpon>
@@ -129,6 +134,12 @@
     <Compile Include="Views\RegisterView.Designer.cs">
       <DependentUpon>RegisterView.cs</DependentUpon>
     </Compile>
+    <Compile Include="Views\UsersView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\UsersView.Designer.cs">
+      <DependentUpon>UsersView.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -153,10 +164,24 @@
     <EmbeddedResource Include="Views\RegisterView.resx">
       <DependentUpon>RegisterView.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Views\UsersView.resx">
+      <DependentUpon>UsersView.cs</DependentUpon>
+    </EmbeddedResource>
     <EntityDeploy Include="Models\FlightsDBModel.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>FlightsDBModel.Designer.cs</LastGenOutput>
     </EntityDeploy>
+    <None Include="FlightsDBDataSet.xsc">
+      <DependentUpon>FlightsDBDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="FlightsDBDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>FlightsDBDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="FlightsDBDataSet.xss">
+      <DependentUpon>FlightsDBDataSet.xsd</DependentUpon>
+    </None>
     <None Include="Models\FlightsDBModel.edmx.diagram">
       <DependentUpon>FlightsDBModel.edmx</DependentUpon>
     </None>
