--- a/FlightManager/FlightManager.csproj
+++ b/FlightManager/FlightManager.csproj
@@ -105,6 +105,18 @@
     <Compile Include="Views\AdminGeneralView.Designer.cs">
       <DependentUpon>AdminGeneralView.cs</DependentUpon>
     </Compile>
+    <Compile Include="Views\BookingsView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\BookingsView.Designer.cs">
+      <DependentUpon>BookingsView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\FlightsView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\FlightsView.Designer.cs">
+      <DependentUpon>FlightsView.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\GeneralView.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -129,6 +141,12 @@
     <Compile Include="Views\RegisterView.Designer.cs">
       <DependentUpon>RegisterView.cs</DependentUpon>
     </Compile>
+    <Compile Include="Views\UsersView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\UsersView.Designer.cs">
+      <DependentUpon>UsersView.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -137,9 +155,16 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="Views\AdminGeneralView.resx">
       <DependentUpon>AdminGeneralView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\BookingsView.resx">
+      <DependentUpon>BookingsView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\FlightsView.resx">
+      <DependentUpon>FlightsView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\GeneralView.resx">
       <DependentUpon>GeneralView.cs</DependentUpon>
@@ -152,6 +177,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Views\RegisterView.resx">
       <DependentUpon>RegisterView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\UsersView.resx">
+      <DependentUpon>UsersView.cs</DependentUpon>
     </EmbeddedResource>
     <EntityDeploy Include="Models\FlightsDBModel.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
@@ -193,6 +221,8 @@
       <DependentUpon>FlightsDBModel.edmx</DependentUpon>
       <LastGenOutput>FlightsDBModel.cs</LastGenOutput>
     </Content>
+    <None Include="Resources\hero-background-5-5.jpg" />
+    <None Include="Resources\photor0318n7r138.jpg" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.7.2">
